force-app/main/default/objects/Oppty_Pipeline_SnapShot__c/Oppty_Pipeline_SnapShot__c.object-meta.xml
<CustomObject>
    <label>Oppty Pipeline SnapShot</label>
    <nameField>
        <displayFormat>OppSnap-{00000000}</displayFormat>
        <label>Oppty Pipeline SnapShot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Oppty Pipeline SnapShots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>