force-app/main/default/objects/Oppty_Pipeline_SnapShot__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account ID</label>
    <type>TextArea</type>
</CustomField>