force-app/main/default/objects/Oppty_Pipeline_SnapShot__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <type>TextArea</type>
</CustomField>