force-app/main/default/objects/Oppty_Pipeline_SnapShot__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <label>Opportunity Owner</label>
    <type>TextArea</type>
</CustomField>