force-app/main/default/objects/Oppty_Pipeline_SnapShot__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>TextArea</type>
</CustomField>